# replicated-cache-layer

./: CMakeLists.txt  README.md  presentation.pptx  ~$presentation.pptx
Archive/: FTCache_Methodology_Results_Update.pptx  generate_random_files  generate_random_files.cpp  midterm_progress.pages  results.csv  v1_main.cpp  v2_main.cpp  v3_main.cpp  v4_main.cpp  v6_main.cpp
Archive/docker-node-project/: FaultTolerantCachingPresentation.pptx  docker-compose.yml  dockerfile  hvac_server.cpp  node_app.cpp
Presentations/: presentation.pptx  presentation_updated.pptx
src/: ConsistentHashRing.hpp  README.md  main  main.cpp  plotting_results.py  results.csv  resultsA.csv  run_test.py  tempCodeRunnerFile.cpp  v5_main.cpp
src/Local_Cache/: example.txt
src/Local_Cache/NodeA/: file_102.txt  file_107.txt  file_108.txt  file_115.txt  file_119.txt  file_128.txt  file_135.txt  file_145.txt  file_146.txt  file_151.txt  file_153.txt  file_160.txt  file_162.txt  file_178.txt  file_182.txt  file_185.txt  file_192.txt  (+12 more)
src/PFS_Source/: file_100.txt  file_103.txt  file_104.txt  file_106.txt  file_109.txt  file_110.txt  file_112.txt  file_114.txt  file_116.txt  file_117.txt  file_120.txt  file_121.txt  file_127.txt  file_129.txt  file_132.txt  file_134.txt  file_137.txt  file_138.txt  file_139.txt  file_140.txt  file_142.txt  file_149.txt  file_152.txt  file_157.txt  file_158.txt  file_161.txt  file_163.txt  file_164.txt  file_165.txt  file_166.txt  file_171.txt  file_174.txt  file_177.txt  file_181.txt  file_186.txt  file_187.txt  file_189.txt  file_191.txt  file_193.txt  file_194.txt  (+41 more)
(+64 files in other folders)
